--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 	<body>
 		<div id="app"></div>
 		<script src="http://js.jamesrock.me/ROCK-9.0.js"></script>
-		<script src="/dist/app.js"></script>
+		<script src="/js/app.js"></script>
 	</body>
 </html>
